// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should render correctly 1`] = `
<footer
  className="relative w-full items-end p-2 md:flex md:justify-between md:py-0 md:pr-0 "
>
  <nav
    className="block items-center px-4 md:flex md:pb-2"
  >
    <section
      className="flex px-2 py-3 md:py-0"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 25 24"
        width="25"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.0644 5.6062C10.9294 5.6062 9.87848 5.91869 8.9747 6.43952C9.24794 7.29366 9.39506 8.23114 9.39506 9.16862C9.39506 9.66861 9.35303 10.1686 9.26895 10.6478C11.3497 12.3144 12.779 14.731 13.1573 17.5018C15.9947 17.0226 18.1176 14.5643 18.1176 11.6269C18.1176 8.29364 15.4062 5.6062 12.0644 5.6062Z"
          fill="#F5B333"
        />
        <path
          d="M7.62956 0.710441C7.75567 0.48128 7.94483 0.377115 8.34418 0.231285C8.74352 0.0854552 8.9537 0.0646222 9.1849 0.189619C9.4161 0.293784 9.52119 0.439614 9.6473 0.793773C9.73137 1.0646 10.2989 3.12706 10.3619 3.52288C10.488 4.06454 10.2148 4.39786 9.75239 4.54369C9.28999 4.71035 8.89065 4.58536 8.65945 4.06453C8.4913 3.68954 7.71363 1.68959 7.60854 1.41876C7.52447 1.10627 7.52447 0.91877 7.62956 0.710441Z"
          fill="#F5B333"
        />
        <path
          d="M14.9438 0.210493C15.175 0.106329 15.4062 0.127161 15.8056 0.252159C16.2049 0.377156 16.3941 0.48132 16.5202 0.710482C16.6463 0.939643 16.6463 1.10631 16.5202 1.46047C16.4151 1.73129 15.6585 3.73125 15.4693 4.08541C15.2381 4.5854 14.8388 4.71039 14.3764 4.56456C13.914 4.41873 13.6407 4.10624 13.7879 3.54375C13.8719 3.14793 14.4184 1.06464 14.5025 0.793813C14.6286 0.460487 14.7337 0.314657 14.9438 0.210493Z"
          fill="#F5B333"
        />
        <path
          d="M21.1652 4.06455C21.4174 4.10622 21.5855 4.27288 21.8378 4.60621C22.09 4.93953 22.174 5.12703 22.153 5.37702C22.111 5.62702 22.0059 5.77285 21.7116 6.00201C21.4805 6.16867 19.6729 7.33531 19.3156 7.52281C18.8322 7.79364 18.4328 7.66864 18.1596 7.27282C17.8653 6.87699 17.8443 6.48117 18.2857 6.10617C18.601 5.83535 20.2614 4.48121 20.4926 4.29371C20.7658 4.08539 20.934 4.02289 21.1652 4.06455Z"
          fill="#F5B333"
        />
        <path
          d="M23.9185 10.8144C24.1077 11.0019 24.1287 11.2102 24.1497 11.6477C24.1708 12.0643 24.1077 12.2727 23.9396 12.4602C23.7714 12.6477 23.6033 12.6893 23.2039 12.7102C22.9097 12.7102 20.7658 12.5852 20.3455 12.5435C19.778 12.481 19.5468 12.1477 19.5678 11.6685C19.5678 11.1894 19.778 10.8352 20.3665 10.7935C20.7869 10.7519 22.9307 10.6269 23.2249 10.606C23.5612 10.5852 23.7504 10.6477 23.9185 10.8144Z"
          fill="#F5B333"
        />
        <path
          d="M22.132 17.8559C22.153 18.1059 22.069 18.3142 21.8167 18.6476C21.5855 19.0017 21.4174 19.1267 21.1652 19.1892C20.913 19.2309 20.7448 19.1684 20.4296 18.9601C20.1984 18.7934 18.5169 17.4393 18.2227 17.1684C17.8023 16.7934 17.8233 16.3768 18.1176 16.0018C18.3908 15.606 18.7901 15.4601 19.2736 15.7518C19.6309 15.9601 21.4594 17.1059 21.6906 17.2726C21.9849 17.4809 22.09 17.6268 22.132 17.8559Z"
          fill="#F5B333"
        />
        <path
          d="M16.4992 22.5225C16.3731 22.7517 16.1839 22.8559 15.7846 23.0017C15.3852 23.1475 15.175 23.1684 14.9438 23.0434C14.7126 22.9392 14.6075 22.7934 14.4814 22.4392C14.3974 22.1684 13.8299 20.1059 13.7668 19.7101C13.6407 19.1684 13.9139 18.8351 14.3763 18.6893C14.8387 18.5226 15.2381 18.6476 15.4693 19.1684C15.6374 19.5434 16.4361 21.5434 16.5202 21.8142C16.6253 22.1267 16.6043 22.3142 16.4992 22.5225Z"
          fill="#F5B333"
        />
        <path
          d="M7.96585 11.1686C8.13399 10.5227 8.21806 9.85608 8.21806 9.18943C8.21806 6.31449 6.66273 3.81455 4.32972 2.43958C3.86732 2.81457 3.44696 3.23122 3.04762 3.66871C5.10739 4.68953 6.5156 6.77281 6.5156 9.18943C6.5156 9.56442 6.47356 9.93941 6.41051 10.3144C6.0532 10.1686 5.69589 10.0227 5.31757 9.91858C5.35961 9.68942 5.38062 9.43942 5.38062 9.21026C5.38062 7.14781 4.11954 5.37701 2.31199 4.58536C1.9757 5.04368 1.68144 5.52284 1.40821 6.02283C2.73235 6.48115 3.69918 7.73113 3.69918 9.21026C3.69918 9.33526 3.69918 9.46025 3.67816 9.58525C3.32085 9.54359 2.96355 9.52275 2.58522 9.52275C2.5642 9.52275 2.54319 9.52275 2.52217 9.52275C2.54319 9.41859 2.54319 9.31442 2.54319 9.21026C2.54319 8.18945 1.84959 7.3353 0.903777 7.08531C0.693596 7.5853 0.504433 8.10612 0.378325 8.64777C0.65156 8.68944 0.882758 8.9186 0.882758 9.21026C0.882758 9.52275 0.630542 9.79358 0.294253 9.79358C0.231199 9.79358 0.189163 9.79358 0.147126 9.77275C0.147126 9.79358 0.147126 9.83525 0.126108 9.85608C0.10509 9.93941 0.10509 10.0019 0.10509 10.0852C0.10509 10.1269 0.0840722 10.1686 0.0840722 10.2102C0.0210181 10.6477 0 11.1269 0 11.6269C0 11.6269 0 11.6269 0 11.6477C0.798686 11.356 1.68144 11.1894 2.58522 11.1894C6.87291 11.1894 10.3619 14.6476 10.3619 18.8975C10.3619 20.4808 9.87849 21.96 9.03777 23.1891C9.62627 23.3349 10.2148 23.4391 10.8453 23.5016C11.623 22.1475 12.0644 20.5642 12.0644 18.8767C12.0644 15.6893 10.425 12.856 7.96585 11.1686Z"
          fill="#9FACD9"
        />
        <path
          d="M2.58522 12.6477C1.70246 12.6477 0.861737 12.8352 0.105087 13.1477C0.18916 13.731 0.29425 14.2935 0.441376 14.8352C1.07192 14.5018 1.80755 14.3143 2.58522 14.3143C5.14942 14.3143 7.23021 16.3768 7.23021 18.9184C7.23021 20.1059 6.78883 21.1684 6.03218 21.9808C6.53661 22.2725 7.04105 22.5225 7.58752 22.7308C8.40722 21.6683 8.91166 20.3559 8.91166 18.9184C8.89064 15.4601 6.07422 12.6477 2.58522 12.6477Z"
          fill="#9FACD9"
        />
        <path
          d="M2.58522 15.7726C1.9757 15.7726 1.40821 15.9392 0.945816 16.2309C1.156 16.7517 1.40821 17.2517 1.70247 17.71C1.95468 17.5225 2.26995 17.4184 2.58522 17.4184C3.40493 17.4184 4.07751 18.085 4.07751 18.8975C4.07751 19.3558 3.86733 19.7725 3.51002 20.0433C3.90936 20.4391 4.32972 20.7933 4.7711 21.1475C5.35961 20.585 5.73793 19.7725 5.73793 18.8975C5.73793 17.1684 4.32972 15.7726 2.58522 15.7726Z"
          fill="#9FACD9"
        />
      </svg>
      <p
        className="ml-2"
      >
        © 
        2023
         Portal 47 Ltd
      </p>
    </section>
    <ul
      className="flex"
    >
      <li
        className="text-ocean-100 hover:text-ocean-150 px-2"
      >
        <a
          href="/"
        >
          test
        </a>
      </li>
    </ul>
  </nav>
</footer>
`;

exports[`<Footer /> with language switcher should render correctly 1`] = `
<footer
  className="relative w-full items-end p-2 md:flex md:justify-between md:py-0 md:pr-0 "
>
  <nav
    className="block items-center px-4 md:flex md:pb-2"
  >
    <section
      className="flex px-2 py-3 md:py-0"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 25 24"
        width="25"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.0644 5.6062C10.9294 5.6062 9.87848 5.91869 8.9747 6.43952C9.24794 7.29366 9.39506 8.23114 9.39506 9.16862C9.39506 9.66861 9.35303 10.1686 9.26895 10.6478C11.3497 12.3144 12.779 14.731 13.1573 17.5018C15.9947 17.0226 18.1176 14.5643 18.1176 11.6269C18.1176 8.29364 15.4062 5.6062 12.0644 5.6062Z"
          fill="#F5B333"
        />
        <path
          d="M7.62956 0.710441C7.75567 0.48128 7.94483 0.377115 8.34418 0.231285C8.74352 0.0854552 8.9537 0.0646222 9.1849 0.189619C9.4161 0.293784 9.52119 0.439614 9.6473 0.793773C9.73137 1.0646 10.2989 3.12706 10.3619 3.52288C10.488 4.06454 10.2148 4.39786 9.75239 4.54369C9.28999 4.71035 8.89065 4.58536 8.65945 4.06453C8.4913 3.68954 7.71363 1.68959 7.60854 1.41876C7.52447 1.10627 7.52447 0.91877 7.62956 0.710441Z"
          fill="#F5B333"
        />
        <path
          d="M14.9438 0.210493C15.175 0.106329 15.4062 0.127161 15.8056 0.252159C16.2049 0.377156 16.3941 0.48132 16.5202 0.710482C16.6463 0.939643 16.6463 1.10631 16.5202 1.46047C16.4151 1.73129 15.6585 3.73125 15.4693 4.08541C15.2381 4.5854 14.8388 4.71039 14.3764 4.56456C13.914 4.41873 13.6407 4.10624 13.7879 3.54375C13.8719 3.14793 14.4184 1.06464 14.5025 0.793813C14.6286 0.460487 14.7337 0.314657 14.9438 0.210493Z"
          fill="#F5B333"
        />
        <path
          d="M21.1652 4.06455C21.4174 4.10622 21.5855 4.27288 21.8378 4.60621C22.09 4.93953 22.174 5.12703 22.153 5.37702C22.111 5.62702 22.0059 5.77285 21.7116 6.00201C21.4805 6.16867 19.6729 7.33531 19.3156 7.52281C18.8322 7.79364 18.4328 7.66864 18.1596 7.27282C17.8653 6.87699 17.8443 6.48117 18.2857 6.10617C18.601 5.83535 20.2614 4.48121 20.4926 4.29371C20.7658 4.08539 20.934 4.02289 21.1652 4.06455Z"
          fill="#F5B333"
        />
        <path
          d="M23.9185 10.8144C24.1077 11.0019 24.1287 11.2102 24.1497 11.6477C24.1708 12.0643 24.1077 12.2727 23.9396 12.4602C23.7714 12.6477 23.6033 12.6893 23.2039 12.7102C22.9097 12.7102 20.7658 12.5852 20.3455 12.5435C19.778 12.481 19.5468 12.1477 19.5678 11.6685C19.5678 11.1894 19.778 10.8352 20.3665 10.7935C20.7869 10.7519 22.9307 10.6269 23.2249 10.606C23.5612 10.5852 23.7504 10.6477 23.9185 10.8144Z"
          fill="#F5B333"
        />
        <path
          d="M22.132 17.8559C22.153 18.1059 22.069 18.3142 21.8167 18.6476C21.5855 19.0017 21.4174 19.1267 21.1652 19.1892C20.913 19.2309 20.7448 19.1684 20.4296 18.9601C20.1984 18.7934 18.5169 17.4393 18.2227 17.1684C17.8023 16.7934 17.8233 16.3768 18.1176 16.0018C18.3908 15.606 18.7901 15.4601 19.2736 15.7518C19.6309 15.9601 21.4594 17.1059 21.6906 17.2726C21.9849 17.4809 22.09 17.6268 22.132 17.8559Z"
          fill="#F5B333"
        />
        <path
          d="M16.4992 22.5225C16.3731 22.7517 16.1839 22.8559 15.7846 23.0017C15.3852 23.1475 15.175 23.1684 14.9438 23.0434C14.7126 22.9392 14.6075 22.7934 14.4814 22.4392C14.3974 22.1684 13.8299 20.1059 13.7668 19.7101C13.6407 19.1684 13.9139 18.8351 14.3763 18.6893C14.8387 18.5226 15.2381 18.6476 15.4693 19.1684C15.6374 19.5434 16.4361 21.5434 16.5202 21.8142C16.6253 22.1267 16.6043 22.3142 16.4992 22.5225Z"
          fill="#F5B333"
        />
        <path
          d="M7.96585 11.1686C8.13399 10.5227 8.21806 9.85608 8.21806 9.18943C8.21806 6.31449 6.66273 3.81455 4.32972 2.43958C3.86732 2.81457 3.44696 3.23122 3.04762 3.66871C5.10739 4.68953 6.5156 6.77281 6.5156 9.18943C6.5156 9.56442 6.47356 9.93941 6.41051 10.3144C6.0532 10.1686 5.69589 10.0227 5.31757 9.91858C5.35961 9.68942 5.38062 9.43942 5.38062 9.21026C5.38062 7.14781 4.11954 5.37701 2.31199 4.58536C1.9757 5.04368 1.68144 5.52284 1.40821 6.02283C2.73235 6.48115 3.69918 7.73113 3.69918 9.21026C3.69918 9.33526 3.69918 9.46025 3.67816 9.58525C3.32085 9.54359 2.96355 9.52275 2.58522 9.52275C2.5642 9.52275 2.54319 9.52275 2.52217 9.52275C2.54319 9.41859 2.54319 9.31442 2.54319 9.21026C2.54319 8.18945 1.84959 7.3353 0.903777 7.08531C0.693596 7.5853 0.504433 8.10612 0.378325 8.64777C0.65156 8.68944 0.882758 8.9186 0.882758 9.21026C0.882758 9.52275 0.630542 9.79358 0.294253 9.79358C0.231199 9.79358 0.189163 9.79358 0.147126 9.77275C0.147126 9.79358 0.147126 9.83525 0.126108 9.85608C0.10509 9.93941 0.10509 10.0019 0.10509 10.0852C0.10509 10.1269 0.0840722 10.1686 0.0840722 10.2102C0.0210181 10.6477 0 11.1269 0 11.6269C0 11.6269 0 11.6269 0 11.6477C0.798686 11.356 1.68144 11.1894 2.58522 11.1894C6.87291 11.1894 10.3619 14.6476 10.3619 18.8975C10.3619 20.4808 9.87849 21.96 9.03777 23.1891C9.62627 23.3349 10.2148 23.4391 10.8453 23.5016C11.623 22.1475 12.0644 20.5642 12.0644 18.8767C12.0644 15.6893 10.425 12.856 7.96585 11.1686Z"
          fill="#9FACD9"
        />
        <path
          d="M2.58522 12.6477C1.70246 12.6477 0.861737 12.8352 0.105087 13.1477C0.18916 13.731 0.29425 14.2935 0.441376 14.8352C1.07192 14.5018 1.80755 14.3143 2.58522 14.3143C5.14942 14.3143 7.23021 16.3768 7.23021 18.9184C7.23021 20.1059 6.78883 21.1684 6.03218 21.9808C6.53661 22.2725 7.04105 22.5225 7.58752 22.7308C8.40722 21.6683 8.91166 20.3559 8.91166 18.9184C8.89064 15.4601 6.07422 12.6477 2.58522 12.6477Z"
          fill="#9FACD9"
        />
        <path
          d="M2.58522 15.7726C1.9757 15.7726 1.40821 15.9392 0.945816 16.2309C1.156 16.7517 1.40821 17.2517 1.70247 17.71C1.95468 17.5225 2.26995 17.4184 2.58522 17.4184C3.40493 17.4184 4.07751 18.085 4.07751 18.8975C4.07751 19.3558 3.86733 19.7725 3.51002 20.0433C3.90936 20.4391 4.32972 20.7933 4.7711 21.1475C5.35961 20.585 5.73793 19.7725 5.73793 18.8975C5.73793 17.1684 4.32972 15.7726 2.58522 15.7726Z"
          fill="#9FACD9"
        />
      </svg>
      <p
        className="ml-2"
      >
        © 
        2023
         Portal 47 Ltd
      </p>
    </section>
    <ul
      className="flex"
    >
      <li
        className="text-ocean-100 hover:text-ocean-150 px-2"
      >
        <a
          href="/"
        >
          test
        </a>
      </li>
    </ul>
  </nav>
  <nav
    className="relative mt-2 flex items-end md:mt-0"
  >
    <input
      hidden={true}
      name="language[title]"
      readOnly={true}
      style={
        {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "display": "none",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      type="hidden"
      value="English"
    />
    <input
      hidden={true}
      name="language[locale]"
      readOnly={true}
      style={
        {
          "borderWidth": "0",
          "clip": "rect(0, 0, 0, 0)",
          "display": "none",
          "height": 0,
          "left": 1,
          "margin": -1,
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": 1,
          "whiteSpace": "nowrap",
          "width": 1,
        }
      }
      type="hidden"
      value="en"
    />
    <button
      aria-expanded={false}
      aria-haspopup="listbox"
      className="bg-ocean-100 inline-flex w-full gap-2 p-2 text-white md:min-w-[190px]"
      data-headlessui-state=""
      disabled={false}
      id="headlessui-listbox-button-:r0:"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <div
        className="flex w-full gap-2"
      >
        <svg
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clipPath="url(#clip0_1_329)"
          >
            <path
              d="M9.74167 21.1C8.475 19.2417 7.625 15.8583 7.625 12C7.625 8.14166 8.45833 4.75833 9.74167 2.89999"
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="1.5"
            />
            <path
              d="M14.2584 21.1C15.5251 19.2417 16.3751 15.8583 16.3751 12C16.3751 8.14166 15.5418 4.75833 14.2584 2.89999"
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="1.5"
            />
            <path
              d="M2.625 12H21.375"
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="1.5"
            />
            <path
              d="M3.70837 7.625H20.2917"
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="1.5"
            />
            <path
              d="M3.70837 16.375H20.2917"
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="1.5"
            />
            <path
              d="M21.375 12C21.3775 14.0263 20.7192 15.9981 19.5 17.6167L21.3667 21.375L16.3667 20.2917C14.555 21.2476 12.48 21.5839 10.4591 21.249C8.43815 20.9141 6.58254 19.9265 5.176 18.4372C3.76946 16.948 2.88941 15.039 2.67043 13.0023C2.45145 10.9655 2.90559 8.91312 3.96341 7.15891C5.02123 5.40469 6.6245 4.04523 8.52804 3.2884C10.4316 2.53157 12.5306 2.41905 14.5042 2.96803C16.4777 3.51701 18.2171 4.69728 19.4564 6.32835C20.6957 7.95942 21.3667 9.95151 21.3667 12H21.375Z"
              stroke="white"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="1.5"
            />
          </g>
          <defs>
            <clipPath
              id="clip0_1_329"
            >
              <rect
                fill="white"
                height="24"
                width="24"
              />
            </clipPath>
          </defs>
        </svg>
        <span>
          English
        </span>
        <span
          className="ml-auto transition-transform duration-200 ease-out"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17 9.5L12 14.5L7 9.5"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </span>
      </div>
    </button>
  </nav>
</footer>
`;
